
	* unix/Makefile.in: changes to html-tcl & html-tk
	targets for compatibility with non-gnu makes.

	* unix/Makefile.in: added macosx/README to dist target.

2003-07-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinReg.c (OpenSubKey): Backported fix for bug 775976
	which causes the registry set command to fail when built with VC7.

2003-07-21  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.4 TAGGED FOR RELEASE ***

	* changes: updated for 8.4.4 release

2003-07-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added option to allow installing manpages
	in addition to default html help.

2003-07-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/Utf.3: Tightened up documentation of Tcl_UtfNext and
	Tcl_UtfPrev to better match the behaviour. [Bug 769895]

2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c: correct MT-safety issues with filesystem
	records. [Bug 753315] (vasiljevic)

	* library/http/pkgIndex.tcl: merged to v2.4.4 from head
	* library/http/http.tcl: add support for user:pass info in URL.
	* tests/http.test:       [Bug 759888] (shiobara)

2003-07-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Corrected several instances of unsafe
	* generic/tclCompile.c:	truncation of UTF-8 strings that might
	* generic/tclProc.c:	break apart a multi-byte character.
	* library/init.tcl:	[Bug 760872]
	* tests/init.test:

	* doc/tcltest.n:		Restored the [Eval] proc to replace
	* library/tcltest/tcltest.tcl:	the [::puts] command when either the
	-output or -error option for [test] is in use, in order to capture
	data written to the output or error channels for comparison against
	what is expected.  This is easier to document and agrees better with
	most user expectations than the previous attempt to replace [puts]
	only in the caller's namespace.  Documentation made more precise on
	the subject.  [Bug 706359]

	* doc/AddErrInfo.3:     Improved consistency of documentation